Реализация RecommendationService c исправлениями